[package]
name = "passleak"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Alexander van Ratingen"]
homepage = "https://github.com/alvra/passleak"
repository = "https://github.com/alvra/passleak"
documentation = "https://docs.rs/passleak"
description = "Check if passwords have been breached"
readme = "README.md"
keywords = ["password", "haveibeenpwned", "api", "async"]

[dependencies]
bytes = "1.0"
sha1 = "0.10.1"
base16ct = "0.1.1"
subtle = "2.4.1"
reqwest = { version = "0.11.11", features = ["gzip", "brotli"] }

[dev-dependencies]
tokio-test = "0.4.2"